# c-poker

./: .gitignore  CMakeLists.txt  README.md  card.c  card.h  main  main.c  makefile
include/: Card.h  Deck.h
src/: Deck.c  main.c
